Running grunt will generate a random Bernie Sanders joke (resolves #3)

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 ],
   "dependencies": {
     "union": "*",
-    "hippie": "*"
+    "hippie": "*",
+    "grunt": "*",
+    "grunt-http": "*"
   },
   "preferGlobal": true,
   "private": false,
